fix(chatroom): fix chatroom z-index and no-image issue (#2790)

--- a/app/styles/components/pages/chatroom/_fullscreen.scss
+++ b/app/styles/components/pages/chatroom/_fullscreen.scss
@@ -1,6 +1,6 @@
 .chatroom-fullscreen {
   position: fixed;
-  z-index: 200;
+  z-index: 1000; // based on MUI Modal z-index (1001 - 1)
   top: 0;
   right: 0;
   bottom: 0;
